<resources>
    <string name="app_name">Smart Bell Control</string>
    <string name="transition_expand" translatable="false">ExpandTransition</string>
    <string name="fcm_topic_name" translatable="false">RingUpdates</string>
    <string name="volume_template" translatable="false">%d%%</string>

    <string name="upload_melody">Upload melody</string>
    <string name="list_all_melodies">List all melodies</string>
    <string name="file_size">Size: %1$s</string>
    <string name="melody_duration">Duration: %1$s</string>
    <string name="byte_suffix">B</string>
    <string name="kilo_byte_suffix">KB</string>
    <string name="mega_byte_suffix">MB</string>
    <string name="melody_duration_unknown">Unknown</string>
    <string name="ring_notification_title">Smart bell</string>
    <string name="ring_notification_content">Ring, Ring … Someone\'s at your door!</string>
    <string name="ring_notification_channel_description">This channel will receive notifications when someone rings on your smart bell</string>
    <string name="week_days_list_pref_summary">Select when do not disturb mode will be active</string>
    <string name="week_days_list_pref_title">Days</string>
    <string name="settings">Settings</string>
    <string name="pref_title_do_not_disturb">Do Not Disturb</string>
    <string name="do_not_disturb_dialog_title">Set Do Not Disturb Interval</string>
    <string name="do_not_disturb_dialog_end_time">End time</string>
    <string name="do_not_disturb_start_time">Start time</string>
    <string name="do_not_disturb_dialog_checkbox_text">End tomorrow</string>
    <string name="pref_do_not_disturb_time_set">Set</string>
    <string name="save">Save</string>
    <string name="tap_to_set_up">Tap to set up</string>
    <string name="err_start_time_not_set">Start time not set!</string>
    <string name="err_days_not_set">Working days not set!</string>
    <string name="err_end_time_not_set">End time not set!</string>
    <string name="scheduled_do_not_disturb">Do not disturb was scheduled on your bell!</string>
    <string name="schedule_do_not_disturb_failed">Scheduling do not disturb failed!</string>
    <string name="err_equal_star_end_time">Start and end times must not be equal!</string>
    <string name="err_could_not_get_disturb_status">Getting \"Do Not Disturb\" settings from bell failed!</string>
    <string name="err_smaller_end_time">End time can not be smaller then start time</string>
    <string name="missed_ring">Someone rang your bell while \"Do Not Disturb\" was on</string>
    <string name="missed_ring_at">Missed ring at %1$s</string>
    <string name="bell_dashboard">My bell</string>
    <string name="ringtone">Ringtone:</string>
    <string name="tap_to_see_more">Tap to see more</string>
    <string name="recent_rings">Recent rings</string>
    <string name="error_connecting_to_bell">There was a problem connecting to your bell!</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="internal_bell_error">Internal bell error occurred!</string>
    <string name="no_ring_entries">No log entries yet. Ring that bell!</string>
    <string name="bell_status">Bell status</string>
    <string name="current_ringtone">Current ringtone:</string>
    <string name="playback_mode">Playback mode:</string>
    <string name="ring_volume">Ring volume:</string>
    <string name="do_not_disturb">Do Not Disturb:</string>
    <string name="playback_mode_delay_template">Stop playing after: %d sec</string>
    <string name="playback_mode_stop_on_release">Stop playing on button release</string>
    <string name="do_not_disturb_status_template_on">On, %1$02d:%2$02d - %3$02d:%4$02d</string>
    <string name="do_not_disturb_status_template_off">Off, %1$02d:%2$02d - %3$02d:%4$02d</string>
    <string name="playback_mode_summary">Set bell payback mode</string>
    <string name="playback_mode_title">Bell playback mode</string>
    <string name="playback_mode_dialog_title">Playback modes</string>
    <string name="playback_duration_title">Playback duration</string>
    <string name="playback_duration_summary">The duration to use when in \"Stop playing after delay\" mode </string>
    <string name="key_playback_dialog_title">Enter time in seconds</string>
    <string name="setting_change_success">Setting changed successfully!</string>
    <string name="setting_change_failure">An error occurred. Could not change Setting!</string>
    <string name="err_playback_duration">Error: Value must be between 10 and 60 seconds</string>
    <string name="volume_pref_title">Bell volume</string>
    <string name="volume_pref_summary">Adjust your bell\'s volume</string>
    <string name="manage_melodies">Manage melodies</string>
    <string name="refresh">Refresh</string>
    <string name="adjust_volume">Adjust volume</string>
    <string name="upload_new_melody">Upload new melody</string>
    <string name="pick_cancelled">Picking cancelled!</string>
    <string name="operation_success">Operation successful</string>
    <string name="set_as_ringtone">Set as ringtone cancelled!</string>
    <string name="set_melody_as_ringtone">Set melody as ringtone?</string>
    <string name="general_erro">An error occurred!</string>
    <string name="preplay_running">To play another melody please stop the current one!</string>
    <string name="delete">Delete</string>
    <string name="melody_delete_success">Melody deleted successfully!</string>
    <string name="no_melodies_uploaded_yet_hit_the_arrow_up_button_to_upload_some">No melodies uploaded yet. Hit the \"arrow up\" button to upload some!</string>
    <string name="ringtone_set_success">Ringtone set successfully!</string>


    <string-array name="week_days_list_pref_entries_arr">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <integer-array name="week_days_list_pref_values_arr">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </integer-array>
    <string-array name="playback_modes">
        <item>Stop playing on button release</item>
        <item>Stop playing after delay</item>
    </string-array>
    <string-array name="playback_modes_values">
        <item>MODE_STOP_ON_RELEASE</item>
        <item>MODE_STOP_AFTER_DELAY</item>
    </string-array>

</resources>
